Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2557

QTemporaryFile::open() fails after QTemporaryFile::remove()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.0.0 Beta 1
    • 4.4.0
    • Core: I/O
    • None
    • I718ceb89daa9a9d46fdbe811fecc3d57d6dc08c2

      When calling remove() after calling QTemporaryFile::open(). QTemporaryFile deletes the temporary file crated by open() and it does not re create any other temporary file when again open() is called on same object of QTemporaryFile.

        1. main.cpp
          0.7 kB
          João Abecasis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            smk smk
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes