Fix QTemporaryFile::open() failing after remove().

If a QTemporaryFile is constructed using a template file path,
the path is generated in QTemporaryFileEngine::open() and then
filePathIsTemplate is set to false. If remove() and then open()
are called on the same QTemporaryFile, the path is not regenerated.
This change ensures that if the file path was generated, it will be
generated again in the scenario above.

Task-number: QTBUG-2557
Change-Id: I718ceb89daa9a9d46fdbe811fecc3d57d6dc08c2
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: f3f648f920a9f4676a5cde98806fc7735119984c https://github.com/qt/qtbase/commit/f3f648f920a9f4676a5cde98806fc7735119984c